# planning

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLANNING_SYSTEM_PROMPT.md  README.md  pyproject.toml  tmp_one_shot.yaml
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml
config/: __init__.py  dataset_generation.yaml  diffusion_3d_training.yaml  diffusion_trajectory_one_shot.yaml  rrt_diffuser_3d_example.yaml  value_3d_training.yaml
docs/images/: remove_background.py
examples/: curve_example.py  diffusion_trajectory_one_shot_example.py  informed_rrt_star_example.py  obstacle_map_example.py  prm_example.py  prm_star_example.py  rrg_example.py  rrt_connect_example.py  rrt_diffuser_3d_example.py  rrt_example.py  rrt_mixed_obstacles_example.py  rrt_star_example.py
planning/: __init__.py  path.py
planning/collision/: __init__.py  collision_checker.py
planning/constraint/: __init__.py  trajectory.py
planning/diffusion/: AGENTS.md  __init__.py  core.py  inference.py  sampling.py  utils.py
planning/diffusion/config/: __init__.py
planning/diffusion/model/: __init__.py  diffusion.py  nn.py  policy.py  utils.py  value.py
planning/diffusion/training/: __init__.py  checkpoint.py  cli.py  config.py  dataset.py  diffusion_trainer.py  epoch_trainer.py  noise.py  trainer.py  value_trainer.py
planning/graph/: __init__.py  graph.py  node.py
planning/map/: __init__.py  map.py  obstacles.py
planning/sampling/: __init__.py  base.py  collision_checker.py  diffusion_guided_sampler.py  prm.py  rrg.py  rrt.py  sampler.py
planning/search/: __init__.py  astar.py
planning/visualization/: __init__.py  base_visualizer.py  camera_utils.py  rrg_visualizer.py  rrt_connect_visualizer.py  rrt_visualizer.py
scripts/: diffusion_train.py  generate_rrt_dataset.py  train_diffusion.py  train_value.py  update_docs_images.sh
tests/: __init__.py  test_astar.py  test_collision.py  test_diffuser_sampling.py  test_diffuser_utils.py  test_diffusion_api.py  test_diffusion_config.py  test_diffusion_core_normalizer.py  test_diffusion_dataset_source.py  test_diffusion_trainer_dataset_horizon.py  test_diffusion_trainer_smoke.py  test_diffusion_trajectory_one_shot_example.py  test_map.py  test_node.py  test_rrt.py  test_sampling_diffusion_guided_sampler.py
